--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/khao_soy.html">Khao Soy</a>
+        <a href="recipes/matcha_waffles.html">Matcha Waffles</a>
+        <a href="recipes/_unadon.html">Unadon</a>
     </body>
 </html>
