Add href for katsu_curry.html

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Edward's Recipes</h1>
         <a href="recipes/khao_soy.html">Khao Soy</a>
         <a href="recipes/matcha_waffles.html">Matcha Waffles</a>
-        <a href="recipes/_unadon.html">Unadon</a>
+        <a href="recipes/katsu_curry.html">Katsu Curry</a>
     </body>
 </html>
