Correct unordered/ordered elements

--- a/recipes/katsu_curry.html
+++ b/recipes/katsu_curry.html
@@ -6,20 +6,20 @@
     <p>When I was traveling through Japan, I made the city of Osaka my jumping-off point for other nearby towns. For this dish, I made my way to Nara. Nara was home to the beautiful, grand temple complex called Todai-Ji. After exploring the temple and the surrounding areas, I headed towards a restaurant famously known for having one of the best Katsu Curry dishes in Nara. I decided to omit the shrimp that usually comes with this dish because, at the time, I wasn’t sure how big the serving was going to be. It was one of my favorite meals I had the pleasure to eat during my trip to Japan!</p>
 
 <h4>Ingredients</h4>
-    <p>
-        <ul>400g / 0.9lb onion sliced into 1cm / 3/8” wide piece</ul>
-        <ul>250g / 0.6lb potato cut into 1.5cm / 5/8” cubes</ul>
-        <ul>100g / 3.5oz carrot sliced to 7mm / 1/4” thick pieces (note 1)</ul>
-        <ul>1 tbsp oil</ul>
-        <ul>1/2 packet of 230g / 0.5lb House Vermont Curry (Mild, note 2)</ul>
-        <ul>800ml / 1.7pt water</ul>
-        <ul>4 cups cooked rice (hot)</ul>
-        <ul>4 Chicken Cutlets cut into 2.5cm / 1” wide strips (note 3)</ul>
-        <ul><i>Fukujinzuke</i> as a condiment (if you have it)</ul>
-    </p>
+    <ul>
+        <li>1 lb onion sliced into 3/8” wide piece</li>
+        <li>0.6 lb potato cut into 5/8” cubes</li>
+        <li>3.5oz carrot sliced to 1/4” thick pieces</li>
+        <li>1 tbsp oil</li>
+        <li>1/2 packet of 0.5lb House Vermont Curry (Mild)</li>
+        <li>1.7pt water</li>
+        <li>4 cups cooked rice (hot)</li>
+        <li>4 Chicken Cutlets cut into 1” wide strips</li>
+        <li><i>Fukujinzuke</i> as a condiment (if you have it)</li>
+    </ul>
 
 <h4>Steps</h4>
-    <p>
+    <ol>
         <li>Put oil into a pot and sauté onion pieces until the edges start browning</li>
         <li>Add potato and carrot pieces to the pot and stir.</li>
         <li>Add water and bring it to a boil. Remove scum as it rises.</li>
@@ -28,4 +28,4 @@
         <li>Put cooked rice on one side of a serving plate, place cutlet pieces next to the rice.</li>
         <li>Pour curry on the side next to the cutlet away from the rice.</li>
         <li>Place a small amount of fukujinzuke on the plate.</li>
-    </p>
+    </ol>
