--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Edward's Recipes</title>
-        <link rel="stylesheet" href="style.css"
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <h1>Edward's Recipes</h1>
-        <a href="recipes/khao_soy.html">Khao Soy</a>
-        <a href="recipes/matcha_waffles.html">Matcha Waffles</a>
-        <a href="recipes/katsu_curry.html">Katsu Curry</a>
+        <a class="link" id="khao-soy" href="recipes/khao_soy.html">Khao Soy</a>
+        <a class="link" id="matcha-waffles" href="recipes/matcha_waffles.html">Matcha Waffles</a>
+        <a class="link" id="katsu-curry" href="recipes/katsu_curry.html">Katsu Curry</a>
     </body>
 </html>
