--- a/recipes/khao_soy.html
+++ b/recipes/khao_soy.html
@@ -1,43 +1,43 @@
-<h1>Khao Soy</h1>
+<link rel="stylesheet" href="../style.css">
 
-<a href='https://postimg.cc/fJ8VzT9r' target='_blank'><img src='https://i.postimg.cc/HkgXtrsd/IMG-4740.jpg' border='0' alt='Khao Soy from Northern Thailand circa 2019'/></a>
+<body>
+    <h1>Khao Soy</h1>
 
-<h3>Where did I try Khao Soy Soup for the first time?</h3>
-<p>In Northern Thailand, in the city of Chiang Rai, I stumbled upon a hole-in-the-wall serving this delicious soup.
-    The aromas of this rich and creamy dish aroused my attention. For $3 a bowl, the cook served me a bowl of Khao Soy
-    with all the ingredients. It was love at first bite.
-</p>
+        <a href='https://postimg.cc/fJ8VzT9r' target='_blank'><img src='https://i.postimg.cc/HkgXtrsd/IMG-4740.jpg' border='0' alt='Khao Soy from Northern Thailand circa 2019'/></a>
 
-<h4>Ingredients</h4>
-    <ul>
-        <li>2 tablespoons vegetable oil</li>
-        <li>3 shallots, chopped</li>
-        <li>3 cloves garlic, minced</li>
-        <li>3/4 cup red curry paste</li>
-        <li>1 tablespoon curry powder</li>
-        <li>4 cups coconut milk</li>
-        <li>2 cups water</li>
-        <li>2 cups chopped cooked chicken, or more to taste</li>
-        <li>1 teaspoon sea salt</li>
-        <li>2 tablespoons fish sauce</li>
-        <li>2 tablespoons white sugar</li>
-        <li>1 tablespoon lime juice</li>
-        <li>1/2 cup vegetable oil</li>
-        <li>12 whole dried Thai chile peppers</li>
-        <li>6 small shallots, cut into quarters</li>
-        <li>1/2 head bok choy, chopped</li>
-        <li>1 (8 ounce) package rice noodles</li>
-        <li>1 cup pickled mustard cabbage, thinly sliced (Optional)</li>
-        <li>1/2 cup coarsely chopped fresh cilantro</li>
-        <li>1 lime, cut into wedges</li>
-        <li>love</li>
-    </ul>
+    <h3>Where did I try Khao Soy Soup for the first time?</h3>
+        <p>In Northern Thailand, in the city of Chiang Rai, I stumbled upon a hole-in-the-wall serving this delicious soup. The aromas of this rich and creamy dish aroused my attention. For $3 a bowl, the cook served me a bowl of Khao Soy with all the ingredients. It was love at first bite.</p>
 
-<h4>Steps</h4>
-    <ol>
-        <li>Heat 2 tablespoons oil in a wok or large skillet over medium heat; cook and stir chopped shallots and garlic until garlic starts to turn golden, 2 to 4 minutes. Add red curry paste and curry powder; cook and stir until fragrant, 1 to 2 minutes. Add coconut milk, water, chicken, and sea salt; bring to a boil. Reduce heat to medium low and simmer soup.</li>
-        <li>Mix fish sauce, sugar, and lime juice into soup and simmer until heated through, about 10 minutes more.</li>
-        <li>Heat 1/2 cup oil in a skillet over medium-high heat; fry Thai chile peppers until browned, 2 to 4 minutes. Transfer chile peppers to soup, reserving oil in skillet. Fry quartered shallots and bok choy in hot oil until browned, 2 to 4 minutes; transfer to soup and reserve oil in skillet.</li>
-        <li>Place noodles in a large bowl and cover with hot water. Set aside until noodles are softened, about 15 minutes. Drain and rinse thoroughly. Add 3/4 of the noodles to the soup. Fry the remaining rice noodles in the hot oil until crisp, 3 to 5 minutes.</li>
-        <li>Divide soup among 6 bowls and top with fried noodles, pickled cabbage, cilantro, and lime wedges.</li>
-    </ol>
+    <h4>Ingredients</h4>
+        <ul>
+            <li>2 tablespoons vegetable oil</li>
+            <li>3 shallots, chopped</li>
+            <li>3 cloves garlic, minced</li>
+            <li>3/4 cup red curry paste</li>
+            <li>1 tablespoon curry powder</li>
+            <li>4 cups coconut milk</li>
+            <li>2 cups water</li>
+            <li>2 cups chopped cooked chicken, or more to taste</li>
+            <li>1 teaspoon sea salt</li>
+            <li>2 tablespoons fish sauce</li>
+            <li>2 tablespoons white sugar</li>
+            <li>1 tablespoon lime juice</li>
+            <li>1/2 cup vegetable oil</li>
+            <li>12 whole dried Thai chile peppers</li>
+            <li>6 small shallots, cut into quarters</li>
+            <li>1/2 head bok choy, chopped</li>
+            <li>1 (8 ounce) package rice noodles</li>
+            <li>1 cup pickled mustard cabbage, thinly sliced (Optional)</li>
+            <li>1/2 cup coarsely chopped fresh cilantro</li>
+            <li>1 lime, cut into wedges</li>
+        </ul>
+
+    <h4>Steps</h4>
+        <ol>
+            <li>Heat 2 tablespoons oil in a wok or large skillet over medium heat; cook and stir chopped shallots and garlic until garlic starts to turn golden, 2 to 4 minutes. Add red curry paste and curry powder; cook and stir until fragrant, 1 to 2 minutes. Add coconut milk, water, chicken, and sea salt; bring to a boil. Reduce heat to medium low and simmer soup.</li>
+            <li>Mix fish sauce, sugar, and lime juice into soup and simmer until heated through, about 10 minutes more.</li>
+            <li>Heat 1/2 cup oil in a skillet over medium-high heat; fry Thai chile peppers until browned, 2 to 4 minutes. Transfer chile peppers to soup, reserving oil in skillet. Fry quartered shallots and bok choy in hot oil until browned, 2 to 4 minutes; transfer to soup and reserve oil in skillet.</li>
+            <li>Place noodles in a large bowl and cover with hot water. Set aside until noodles are softened, about 15 minutes. Drain and rinse thoroughly. Add 3/4 of the noodles to the soup. Fry the remaining rice noodles in the hot oil until crisp, 3 to 5 minutes.</li>
+            <li>Divide soup among 6 bowls and top with fried noodles, pickled cabbage, cilantro, and lime wedges.</li>
+        </ol>
+</body>
