--- a/recipes/matcha_waffles.html
+++ b/recipes/matcha_waffles.html
@@ -1,30 +1,34 @@
-<h1>Matcha Waffles</h1>
+<link rel="stylesheet" href="../style.css">
 
-    <a href='https://postimg.cc/k6tYSFn5' target='_blank'><img src='https://i.postimg.cc/PxSgB291/IMG-4954.jpg' border='0' alt='Matcha Waffles with Ice Cream Topping'/></a>
+<body>
+    <h1>Matcha Waffles</h1>
 
-<h3>Where Did I Try Matcha Waffles?</h3>
-    <p>Before ordering these matcha waffles in Japan, I had never tried matcha <i>except that one occasion when I ordered matcha iced tea at Starbucks.</i> During my travels to Japan, I visited the city of Kyoto, known for its refined culture, dining, and temples. On a whim, I decided to take a detour to the small town of Uji to glimpse the Byodo-In temple. Uji is also known to produce the highest grade of matcha in Japan. After visiting the Byodo-In temple, I walked the town of Uji to locate a restaurant that served a matcha-based brunch. I tracked a small restaurant overlooking the Uji River and ordered Matcha waffles with matcha tea.</p>
+        <a href='https://postimg.cc/k6tYSFn5' target='_blank'><img src='https://i.postimg.cc/PxSgB291/IMG-4954.jpg' border='0' alt='Matcha Waffles with Ice Cream Topping'/></a>
 
-<h4>Ingredients</h4>
-    <ul>
-        <li>2 cups flour all-purpose</li>
-        <li>1 tablespoon sugar</li>
-        <li>1 tablespoon baking powder</li>
-        <li>1 tablespoon matcha powder</li>
-        <li>1/4 teaspoon salt</li>
-        <li>1 3/4 cups almond milk or milk of choice</li>
-        <li>1/2 cup butter melted (plant based or dairy)</li>
-        <li>1 tablespoon vanilla extract</li>
-     </ul>
+    <h3>Where Did I Try Matcha Waffles?</h3>
+        <p>Before ordering these matcha waffles in Japan, I had never tried matcha <i>except that one occasion when I ordered matcha iced tea at Starbucks.</i> During my travels to Japan, I visited the city of Kyoto, known for its refined culture, dining, and temples. On a whim, I decided to take a detour to the small town of Uji to glimpse the Byodo-In temple. Uji is also known to produce the highest grade of matcha in Japan. After visiting the Byodo-In temple, I walked the town of Uji to locate a restaurant that served a matcha-based brunch. I tracked a small restaurant overlooking the Uji River and ordered Matcha waffles with matcha tea.</p>
+
+    <h4>Ingredients</h4>
+        <ul>
+            <li>2 cups flour all-purpose</li>
+            <li>1 tablespoon sugar</li>
+            <li>1 tablespoon baking powder</li>
+            <li>1 tablespoon matcha powder</li>
+            <li>1/4 teaspoon salt</li>
+            <li>1 3/4 cups almond milk or milk of choice</li>
+            <li>1/2 cup butter melted (plant based or dairy)</li>
+            <li>1 tablespoon vanilla extract</li>
+        </ul>
     
 
-<h4>Steps</h4>
-    <ol>
-        <li>Preheat your waffle iron according to manufacturer's instructions.</li>
-        <li>In a large bowl, whisk together the flour, sugar, baking powder, matcha powder, and salt. </li>
-        <li>In a medium bowl, whisk the eggs and milk.</li>
-        <li>Pour the milk mixture over the flour mixture and whisk gently. Then pour in the melted butter and gently whisk to combine. Do not overmix.</li>
-        <li>Add the batter to the preheated waffle iron. (My standard size waffle iron uses about a 1/2 cup batter, whereas my mini waffle maker uses about 3 tablespoons).</li>
-        <li>Cook waffles until brown and crisp. This will take less than 2 minutes for a mini waffle, and 2-3 minutes for a standard size waffle.</li>
-        <li>Serve warm, with maple syrup, butter, and/or choice of toppings.</li>
-    </ol>
+    <h4>Steps</h4>
+        <ol>
+            <li>Preheat your waffle iron according to manufacturer's instructions.</li>
+            <li>In a large bowl, whisk together the flour, sugar, baking powder, matcha powder, and salt. </li>
+            <li>In a medium bowl, whisk the eggs and milk.</li>
+            <li>Pour the milk mixture over the flour mixture and whisk gently. Then pour in the melted butter and gently whisk to combine. Do not overmix.</li>
+            <li>Add the batter to the preheated waffle iron. (My standard size waffle iron uses about a 1/2 cup batter, whereas my mini waffle maker uses about 3 tablespoons).</li>
+            <li>Cook waffles until brown and crisp. This will take less than 2 minutes for a mini waffle, and 2-3 minutes for a standard size waffle.</li>
+            <li>Serve warm, with maple syrup, butter, and/or choice of toppings.</li>
+        </ol>
+</body>
